@@ -8,6 +8,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.Before;
@@ -15,7 +16,7 @@ import org.junit.Test;
 import org.mockito.ArgumentMatchers;
 import org.mockito.Mockito;
 
-import gov.healthit.chpl.domain.CertificationCriterion;
+import gov.healthit.chpl.certificationCriteria.CertificationCriterion;
 import gov.healthit.chpl.domain.CertificationResult;
 import gov.healthit.chpl.domain.CertifiedProductSearchDetails;
 import gov.healthit.chpl.exception.EntityRetrievalException;
@@ -401,7 +402,7 @@ public class FunctionalityTestedReviewerTest {
                             .number("170.315 (a)(2)")
                             .title("a2")
                             .removed(false)
-                            .build()).toList())
+                            .build()).collect(Collectors.toList()))
                     .build());
         List<CertificationResultFunctionalityTested> functionalitiesTested = new ArrayList<CertificationResultFunctionalityTested>();
         functionalitiesTested.add(CertificationResultFunctionalityTested.builder()
@@ -523,7 +524,7 @@ public class FunctionalityTestedReviewerTest {
                         .number("170.315 (a)(1)")
                         .title("a1")
                         .removed(false)
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
                 .build());
         a1FunctionalityTested.add(FunctionalityTested.builder()
                 .id(2L)
@@ -534,7 +535,7 @@ public class FunctionalityTestedReviewerTest {
                         .number("170.315 (a)(1)")
                         .title("a1")
                         .removed(false)
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
                 .build());
         a1FunctionalityTested.add(FunctionalityTested.builder()
                 .id(4L)
@@ -545,7 +546,7 @@ public class FunctionalityTestedReviewerTest {
                         .number("170.315 (a)(1)")
                         .title("a1")
                         .removed(false)
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
                 .build());
         a2FunctionalityTested.add(FunctionalityTested.builder()
                 .id(3L)
@@ -556,7 +557,7 @@ public class FunctionalityTestedReviewerTest {
                         .number("170.315 (a)(2)")
                         .title("a2")
                         .removed(false)
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
                 .build());
 
         maps.put(1L, a1FunctionalityTested);
